...
                                        ref.invalidate(petProvider);

                                        Navigator.of(context).pop();
                                      }
                                    },
                                    child: activeStep == 3
                                        ? const Text('登録',
                                            style:
                                                TextStyle(color: Colors.white))
                                        : const Text('次へ'),
                                  );
                                },
                              )),
                        ])))
              ]),
            ],
...
