...
                    trailing: SizedBox(
                        child: Column(
                            crossAxisAlignment: CrossAxisAlignment.end,
                            mainAxisSize: MainAxisSize.min,
                            children: [
                          if (memo.trim().isNotEmpty)
                            const Text('テキストあり')
                          else
                            const Text('テキストなし'),
                          if (headerImagePath != null)
                            const Text('画像あり')
                          else
                            const Text('画像なし'),
...
