...
                                                    Icons.add)),
                                            SizedBox(
                                                height: 300,
                                                child: ListView.builder(
                                                    padding: const EdgeInsets
                                                        .fromLTRB(
                                                        20, 0, 20, 15),
                                                    shrinkWrap: true,
                                                    itemCount:
                                                        tasks[index].length,
                                                    itemBuilder:
                                                        (context, taskIndex) {
                                                      return SizedBox(
...
